--- a/charts/cx-operator/templates/statefulSet.yaml
+++ b/charts/cx-operator/templates/statefulSet.yaml
@@ -51,6 +51,16 @@ spec:
                 configMapKeyRef:
                   name: {{ .Release.Name }}-configmap
                   key: config.path
+{{- if .Values.config.enableTracing }}
+            - name: OTEL_EXPORTER_AGENT_PORT
+              value: 4317
+            - name: OTEL_SERVICE_NAME
+              value: {{ .Chart.Name }}
+            - name: OTEL_EXPORTER_AGENT_HOST
+              fieldRef:
+                apiVersion: v1
+                fieldPath: status.hostIP
+{{- end }}
           envFrom:
             - secretRef:
                 name: coralogix-operator-secrets
