--- a/charts/cx-operator/values.yaml
+++ b/charts/cx-operator/values.yaml
@@ -11,7 +11,9 @@ config:
     alerts: []
   # list of labels to add to alerts from alertset CRD, it matches label keys using regular expressions
   alertLabels: []
-  enableTracing: false
+  tracing:
+    enabled: true
+    port: "4317"
 image:
   pullPolicy: IfNotPresent
   repository: coralogixrepo
