--- a/charts/cx-operator/Chart.yaml
+++ b/charts/cx-operator/Chart.yaml
@@ -1,8 +1,8 @@
 apiVersion: v2
-appVersion: 0.5.10
+appVersion: not-set # set by the release process on the fly
 description: Coralogix Kubernetes Operator
 name: cx-operator
 sources:
 - https://github.com/coralogix/cx-operator
 type: application
-version: 0.5.10
+version: not-set # set by the release process on the fly
