quote the value and rename configmap

--- a/charts/cx-operator/templates/configMap.yaml
+++ b/charts/cx-operator/templates/configMap.yaml
@@ -67,6 +67,6 @@ data:
       {{- end }}  
     ]
     
-    enableTracing = {{ .Values.config.enableTracing }}
+    enableTracing = {{ .Values.config.tracing.enabled }}
 
 
