add 36H validation to crd timeframe

--- a/crds/crd-coralogix-alert-set.yaml
+++ b/crds/crd-coralogix-alert-set.yaml
@@ -84,7 +84,7 @@ spec:
                               timeframe:
                                 description: The valid timeframes depend on the condition type. For NEW_VALUE alerts it can be 12H..3M, otherwise 5Min..24H
                                 type: string
-                                enum: ["1Min", "2Min", "5Min", "10Min", "20Min", "30Min", "1H", "2H", "3H", "4H", "6H", "12H", "24H", "48H", "72H", "1W", "1M", "2M", "3M"]
+                                enum: ["1Min", "2Min", "5Min", "10Min", "20Min", "30Min", "1H", "2H", "3H", "4H", "6H", "12H", "24H", "36H", "48H", "72H", "1W", "1M", "2M", "3M"]
                               groupBy:
                                 description: Required for NEW_VALUE conditions
                                 type: string
